--- a/c3mod.css
+++ b/c3mod.css
@@ -141,8 +141,7 @@
 /*-- Arc --*/
 .c3-chart-arcs-title {
   dominant-baseline: middle;
-  font-size: 12px; 
-  font-family: "Josefin Slab";}
+  font-size: 12px; }
 
 .c3-chart-arcs .c3-chart-arcs-background {
   fill: #e0e0e0;
@@ -150,8 +149,7 @@
 
 .c3-chart-arcs .c3-chart-arcs-gauge-unit {
   fill: #000;
-  font-size: 16px; 
-  font-family: "Josefin Slab";}
+  font-size: 16px; }
 
 .c3-chart-arcs .c3-chart-arcs-gauge-max {
   fill: #777; }
