--- a/c3mod.css
+++ b/c3mod.css
@@ -1,8 +1,6 @@
 /*-- Chart --*/
 .c3 svg {
-  font-size: 10px; 
-  font-family: "Josefin Slab";
-  }
+  font: 10px sans-serif; }
 
 .c3 path, .c3 line {
   fill: none;
@@ -21,7 +19,7 @@
 
 .c3-chart-arc text {
   fill: #fff;
-  font-size: 10px; }
+  font-size: 13px; }
 
 /*-- Axis --*/
 /*-- Grid --*/
@@ -81,9 +79,7 @@
 /*-- Select - Drag --*/
 /*-- Legend --*/
 .c3-legend-item {
-  font-size: 12px; 
-  font-family: "Josefin Slab";
-  }
+  font-size: 12px; }
 
 .c3-legend-item-hidden {
   opacity: 0.15; }
@@ -141,7 +137,7 @@
 /*-- Arc --*/
 .c3-chart-arcs-title {
   dominant-baseline: middle;
-  font-size: 12px; }
+  font-size: 1.3em; }
 
 .c3-chart-arcs .c3-chart-arcs-background {
   fill: #e0e0e0;
